<resources>
    <string name="app_name">BuzzBee</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_users">User</string>
    <string name="nav_item_events">Events</string>
    <string name="nav_item_schedule">Schedule</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_chatroom">Chat Room</string>

    <string-array name="category_array">
        <item>Non-specified</item>
        <item>Sports</item>
        <item>Study</item>
        <item>Travel</item>
        <item>Party</item>
        <item>Others</item>
    </string-array>

    <string-array name="period_array">
        <item>Non-specified</item>
        <item>0:00 - 2:00</item>
        <item>2:00 - 4:00</item>
        <item>4:00 - 6:00</item>
        <item>6:00 - 8:00</item>
        <item>8:00 - 10:00</item>
        <item>10:00 - 12:00</item>
        <item>12:00 - 14:00</item>
        <item>14:00 - 16:00</item>
        <item>16:00 - 18:00</item>
        <item>18:00 - 20:00</item>
        <item>20:00 - 22:00</item>
        <item>22:00 - 24:00</item>
    </string-array>

    <string-array name="states">
        <item>Non-specified</item>
        <item>AK</item>
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DC</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>GU</item>
        <item>HI</item>
        <item>IA</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>MA</item>
        <item>MD</item>
        <item>ME</item>
        <item>MH</item>
        <item>MI</item>
        <item>MN</item>
        <item>MO</item>
        <item>MS</item>
        <item>MT</item>
        <item>NC</item>
        <item>ND</item>
        <item>NE</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NV</item>
        <item>NY</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>PR</item>
        <item>PW</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VA</item>
        <item>VI</item>
        <item>VT</item>
        <item>WA</item>
        <item>WI</item>
        <item>WV</item>
        <item>WY</item>
    </string-array>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_events</item>
        <item>@string/nav_item_schedule</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_chatroom</item>
        <item>@string/nav_item_users</item>
    </string-array>

    <string name="title_events">Events</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_friends">Friends</string>
    <string name="title_chatroom">Chat Room</string>
    <string name="title_user">User Information</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_">Login_Activity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_event__join_">Event_Join_Activity</string>
    <string name="title_activity_event__issue_">Event_Issue_Activity</string>
    <string name="title_activity_friends__info_">Friends_Info_Activity</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>

    <string name="toolbar_title"></string>

    <!-- aws -->
    <string name="step1">1. You can upload an image file to the Amazon S3 using AsyncTask:</string>

    <string name="show_in_browser">Show in Browser</string>
    <string name="select_photo">Select Photo</string>
    <string name="step2">2. You can see the image that you have uploaded in the browser:</string>
    <string name="sync_requests_note">*** Do not call synchronous AWS requests on the main thread.</string>
    <string name="upload_failure_title">Upload Failure</string>
    <string name="browser_failure_title">Browser Failure</string>
    <string name="ok">OK</string>
    <string name="uploading">Uploading…</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>

    <!-- Error messages -->
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>
    <string name="title_activity_chat">ChatActivity</string>

    <string name="message_elipses">Message</string>

    <string name="choose_image_take_photo">Take Photo</string>
    <string name="choose_image_select_photo">Select Photo</string>

    <string name="user_home_button_save">Save</string>
    <string name="user_home_stop_play">Stop Play</string>
    <string name="user_home_start_play">Start Play</string>
    <string name="user_home_start_record">Start Record</string>
    <string name="user_home_stop_record">Stop Record</string>
    <string name="user_home_female">Female</string>
    <string name="user_home_male">Male</string>
    <string name="user_home_hint_age">please input user age</string>
    <string name="user_home_hint_name">please input user name</string>
    <string name="user_home_id">ID: </string>
    <string name="user_home_title">Title: </string>
    <string name="user_home_beginner">Beginner </string>
    <string name="user_home_email">Email: </string>
    <string name="user_home_desc_hint">please input user description</string>

    <string name="schedule_home_image_desc">calendar</string>
    <string name="schedule_home_date_default">Date:\n Not Selected</string>
    <string name="schedule_home_list_all">List All</string>


</resources>
