<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background"
    tools:context="com.goldenbros.buzzbee.ui.user_ui.User_Home_Fragment">

    <RelativeLayout
        android:id="@+id/userInfoViewLayout"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/amber">


        <ImageView
            android:id="@+id/userImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/unknown"
            tools:ignore="ContentDescription" />


        <LinearLayout
            android:id="@+id/id_title_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userImageView"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/idPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_home_id"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/idTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/titlePrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/user_home_title"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_home_beginner"
                android:textSize="15sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/emailLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_title_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/emailPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_home_email"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/userInfoEditLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/userInfoViewLayout"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <!-- user name -->
        <LinearLayout
            android:id="@+id/userNameLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/eventNameButton"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/userNameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:hint="@string/user_home_hint_name"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>


        <!-- user age -->
        <LinearLayout
            android:id="@+id/userAgeLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/userNameLayout"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/userAgeButton"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/userAgeEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:hint="@string/user_home_hint_age"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>

        <!-- user sex -->
        <LinearLayout
            android:id="@+id/userSexLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/userAgeLayout"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/userSexButton"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                tools:ignore="UselessParent">

                <RadioGroup
                    android:id="@+id/radioSexGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginStart="@dimen/layout_margin_10"
                        android:text="@string/user_home_female" />

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/user_home_male" />

                </RadioGroup>


            </RelativeLayout>
        </LinearLayout>


        <!-- user description -->
        <LinearLayout
            android:id="@+id/userDescriptionLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userSexLayout"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/userDescriptionButton"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/userDescriptionEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:gravity="center_vertical|center_horizontal"
                    android:hint="@string/user_home_desc_hint"
                    android:inputType="textMultiLine"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>

        <!-- user audio description -->
        <LinearLayout
            android:id="@+id/userAudioLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/userDescriptionLayout"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/userAudioDescriptionButton"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                tools:ignore="UselessParent">

                <Button
                    android:id="@+id/start_record_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#F48FB1"
                    android:text="@string/user_home_start_record"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/stop_record_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#64B5F6"
                    android:text="@string/user_home_stop_record" />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/userAudioPlayButton"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_below="@+id/userAudioLayout"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/saveButton">

            <Button
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#F48FB1"
                android:text="@string/user_home_start_play"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/stop_play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#64B5F6"
                android:text="@string/user_home_stop_play"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
        <!-- save user information -->
        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/user_home_button_save" />

    </RelativeLayout>
</RelativeLayout>