<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/light_gray"
        android:id="@+id/dateSelectLayout">

        <ImageButton
            android:id="@+id/event_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/date_calendar"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/schedule_home_image_desc"/>

        <TextView
            android:id="@+id/selectedDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/schedule_home_date_default"
            android:textSize="20sp"
            android:layout_alignBottom="@+id/listAllEventsButton"
            android:layout_toEndOf="@+id/event_date_picker" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_home_list_all"
            android:id="@+id/listAllEventsButton"
            android:layout_alignBottom="@+id/event_date_picker"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_alignParentEnd="true"
            android:textColor="#ff000000"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>



    <!-- list all events -->
    <LinearLayout
        android:layout_marginTop="20sp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/dateSelectLayout"
        android:orientation="vertical">

        <ListView
            android:id="@+id/schedule_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/orange_transparent" />

    </LinearLayout>


</RelativeLayout>